--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -8,7 +8,7 @@
 <body> 
     <div>
     <h1>Chicken Noodles </h1>
-    <img src="/img/inside/ramen-melkamell.gif">
+    <img src="./img/inside/ramen-melkamell.gif">
     <p>
         Noodles Noodles Noodles don't we all love Noodles ?! 
         What is better than Noodles?<strong>Chicken Noodles</strong> it's easy and simple but can be
