--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -35,7 +35,7 @@
                 cheese on top you can also search this recipe on a real website .
             </li>
         </ul>
-        <img src="/img/inside/chika-eating.gif">
+        <img src="../img/inside/chika-eating.gif">
 
     </div>
 
