--- a/recipes/rice.html
+++ b/recipes/rice.html
@@ -9,7 +9,7 @@
     <div>
         <div class="1">
             <h1> Onigiri</h1>
-            <img id="onigiri" src="./img/inside/squirtle-eating.gif"  width="300px" height="300px" alt="anime">
+            <img id="onigiri" src="../img/inside/squirtle-eating.gif"  width="300px" height="300px" alt="anime">
             <p>
                 Hello we will be making onigari because why not but it's the eary version
                 you can enjoy it hot ,cold or in a room temprature and they are a really good snack.
@@ -62,7 +62,7 @@
             <p>
                 you can put whatever you like in it also you can search the recipe on a real website .
             </p>
-            <img src="./img/inside/pokemon-eat.gif">
+            <img src="../img/inside/pokemon-eat.gif">
 
 
 
