--- a/recipes/tea.html
+++ b/recipes/tea.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1> TEA</h1>
-        <img src="/img/inside/anime-gif-anime.gif">
+        <img src="../img/inside/anime-gif-anime.gif">
         <p>
             tea is peotic 
             Because Tea is one of the oldest drinks on this earth ,we love it and respect it .
@@ -29,7 +29,7 @@
 
         </ol>
         <p> that's it though ENJOY your drink and maybe you can add some mint </p>
-        <img src="/img/inside/tea-anime.gif">
+        <img src="../img/inside/tea-anime.gif">
     </div>
     
 </body>
