--- a/recipes/water.html
+++ b/recipes/water.html
@@ -9,10 +9,10 @@
     <div>
         <div>
         <h1> Water</h1>
-        <img src="/img/inside/hot-summer.gif" width="200px" height="200px">
+        <img src="../img/inside/hot-summer.gif" width="200px" height="200px">
         <p> Because water is fun and water is life and because we are 70% or more water i guess 
         and because i feel like i have a long way down this path so let's drink water  </p>
-        <img src="/img/inside/pikachu-shocked-face-stunned.gif" width="200px" height="200px">
+        <img src="../img/inside/pikachu-shocked-face-stunned.gif" width="200px" height="200px">
         </div>
         <div>
             <h2>
@@ -21,7 +21,7 @@
             <ul>
                 <li> put a bottle of water next to you so you can remind yourself to drink</li>
             </ul>
-            <img src="/img/inside/pikachu-drink.gif">
+            <img src="../img/inside/pikachu-drink.gif">
             
             
         </div>
